--- a/app/components/calendar/calendar.css
+++ b/app/components/calendar/calendar.css
@@ -8,6 +8,7 @@
 
 /* Week header */
 .rbc-header {
+  background-color: orange;
   overflow: hidden;
   -webkit-flex: 1 0 0%;
   -ms-flex: 1 0 0%;
@@ -107,9 +108,6 @@
   flex: 1 0 0;
   overflow: hidden;
 }
-.rbc-day-bg {
-  flex: 1 0 0%;
-}
 
 .rbc-overlay > * + * {
   margin-top: 1px;
@@ -133,8 +131,10 @@
 }
 
 .rbc-day-bg {
+  flex: 1 0 0%;
   background-color: hsl(var(--background));
   border-right: 1px solid hsl(var(--border));
+  border-left: 1px solid hsl(var(--border));
 }
 
 .rbc-event:hover {
